# fsagov

./: .gitignore  AGENTS.md  README.md  RosreestrParser.lnk  config.json  config.py  main.py  main_update.py  main_xlsx.py  pyproject.toml  run.bat  run.pyw  web_app.py
.streamlit/: config.toml
data/: parser_state.json  rosreestr.db-shm
parser/: __init__.py  api_client.py  models.py  storage.py
src/utils/: api_tools.py  db_tools.py  log_tools.py  models.py  xlsx_tools.py
