[project]
name = "fsagov-parser"
version = "0.2.0"
description = "Парсер данных Росреестра с pub.fsa.gov.ru"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "tqdm>=4.66.0",
    "loguru>=0.7.3",
    "openpyxl>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
